# SDC-Comprehensive-Evaluation

./: README.md
1기/first/answer/comp12/: CMakeLists.txt  main.cpp
1기/first/answer/comp12/acceleration/entity/: Acceleration2d.cpp  Acceleration2d.h
1기/first/answer/comp12/mysql/: DbProcess.cpp  DbProcess.h
1기/first/answer/comp12/utility/random/: RandomGenerator.cpp  RandomGenerator.h
1기/first/answer/comp12/utility/vector/: Vector2d.cpp  Vector2d.h
1기/first/answer/comp12/velocity/entity/: Velocity2d.cpp  Velocity2d.h
1기/first/answer/comp26/: CMakeLists.txt  main.cpp
1기/first/answer/comp26/railgun/controller/: RailGunController.cpp  RailGunController.h
1기/first/answer/comp26/railgun/entity/: RailGun.cpp  RailGun.h
1기/first/answer/comp26/railgun/repository/: RailGunRepository.h  RailGunRepositoryImpl.cpp  RailGunRepositoryImpl.h
1기/first/answer/comp26/railgun/service/: RailGunService.h  RailGunServiceImpl.cpp  RailGunServiceImpl.h
1기/first/answer/comp26/tests/uniformAccelerationMotion/: CMakeLists.txt
1기/first/answer/comp26/uniformAccelerationMotion/repository/: UniformAccelerationMotionRepository.h  UniformAccelerationMotionRepositoryImpl.cpp  UniformAccelerationMotionRepositoryImpl.h
1기/first/answer/comp26/uniformAccelerationMotion/service/: UniformAccelerationMotionService.h  UniformAccelerationMotionServiceImpl.cpp  UniformAccelerationMotionServiceImpl.h
1기/first/answer/comp26/uniformVelocityMotion/repository/: UniformVelocityMotionRepository.h  UniformVelocityMotionRepositoryImpl.cpp  UniformVelocityMotionRepositoryImpl.h
1기/first/answer/comp26/uniformVelocityMotion/service/: UniformVelocityMotionService.h  UniformVelocityMotionServiceImpl.cpp  UniformVelocityMotionServiceImpl.h
1기/first/answer/comp26/velocity/repository/: VelocityRepository.h  VelocityRepositoryImpl.cpp  VelocityRepositoryImpl.h
1기/first/answer/comp26/velocity/service/: VelocityService.h  VelocityServiceImpl.cpp  VelocityServiceImpl.h
1기/first/hyoungjunlee/comp12/: CMakeLists.txt  main.cpp
1기/first/hyoungjunlee/comp12/entity/: Velocity.cpp  Velocity.h
1기/first/hyoungjunlee/comp12/mysql/: DbProcess.cpp  DbProcess.h
1기/first/hyoungjunlee/comp12/utility/: RandomSleeper.cpp  RandomSleeper.h
1기/first/jaelimlee/comp12/: CMakeLists.txt  main.cpp
1기/first/jaelimlee/comp12/Acceleration/entity/: Acceleration.cpp  Acceleration.h
1기/first/jaelimlee/comp12/mysql/: DbProcess.cpp  DbProcess.h
1기/first/jaelimlee/comp12/utility/: Randomgenerator.cpp  Randomgenerator.h
1기/first/jaelimlee/comp12/velocity/entity/: Velocity.cpp  Velocity.h
1기/first/jaelimlee/comp12/velocity/repository/: VelocityRepository.h  VelocityRepositoryImpl.cpp  VelocityRepositoryImpl.h
1기/first/jaeseunglee/comp12/: CMakeLists.txt  main.cpp
1기/first/jaeseunglee/comp12/entity/: Acceleration.cpp  Acceleration.h  Displacement.cpp  Displacement.h  Vector.cpp  Vector.h  Velocity.cpp  Velocity.h
1기/first/jaeseunglee/comp12/mysql/: DbProcess.cpp  DbProcess.h
1기/first/jaeseunglee/comp12/utility/: RandomGenerator.h
1기/first/jaeseunglee/comp12/utility/random/: RandomGenerator.cpp  RandomGenerator.h
1기/first/jaeseunglee/comp12/utility/sleep/: Sleeper.cpp  Sleeper.h
1기/first/jaeseunglee/comp24/: CMakeLists.txt  main.c
1기/first/jaeseunglee/comp24/entity/: Product.h  product.c  product.h
1기/first/janghunpark/answer/: CMakeLists.txt  main.cpp
1기/first/janghunpark/answer/comp12/controller/: VelocityController.cpp  VelocityController.h
1기/first/janghunpark/answer/comp12/entity/: Accelaration.cpp  Accelaration.h  Velocity.cpp  Velocity.h
1기/first/janghunpark/answer/comp12/mysql/: DbProcess.cpp  DbProcess.h
1기/first/janghunpark/answer/comp12/repository/: VelocityRepository.h  VelocityRepositoryImpl.cpp  VelocityRepositoryImpl.h
1기/first/janghunpark/answer/comp12/service/: VelocityService.h  VelocityServiceImpl.cpp  VelocityServiceImpl.h
1기/first/janghunpark/answer/comp12/utility/: RandomGenerator.cpp  (+3 more)
1기/first/janghunpark/answer/comp34/: request.c  request.h  response.c  response.h
1기/first/junghunwoo/comp12/: CMakeLists.txt  main.cpp
1기/first/junghunwoo/comp12/mysql/: DbProcess.cpp  DbProcess.h
1기/first/junghwancho/comp12/: CMakeLists.txt  main.cpp
1기/first/junghwancho/comp12/acceleration/: Acceleration.cpp  Acceleration.h
1기/first/junghwancho/comp12/mysql/: DbProcess.cpp  DbProcess.h
1기/first/junghwancho/comp12/utility/: RandomGenerate.cpp  RandomGenerate.h
1기/first/junghwancho/comp12/velocity/: Velocity.cpp  Velocity.h
1기/first/junyeonkim/comp12/: CMakeLists.txt  main.cpp
1기/first/junyeonkim/comp12/DatabaseConnection/: DatabaseConnection.cpp  DatabaseConnection.h
1기/first/junyeonkim/comp12/RandomSleep/: RandomSleep.cpp  RandomSleep.h
1기/first/junyeonkim/comp12/Speed/: Speed.cpp  Speed.h
1기/first/seunghunjo/comp12/: CMakeLists.txt  main.cpp
1기/first/seunghunjo/comp12/entity/: Speed.cpp  Speed.h
1기/first/seunghunjo/comp12/mysql_db/: DbProcess.cpp  DbProcess.h
1기/first/seunghunjo/comp12/sleep/: Sleep.cpp  Sleep.h
1기/first/sungyonglee/comp12/: CMakeLists.txt  main.cpp
1기/first/sungyonglee/comp12/randomVelocity/: randomVelocity.cpp  randomVelocity.h
1기/first/sungyonglee/comp12/utility/: RandomGenerator.cpp  RandomGenerator.h
1기/first/sungyonglee/comp12/velocity/: Velocity.cpp  Velocity.h
1기/first/sungyoungjang/comp12/: CMakeLists.txt  main.cpp
1기/first/sungyoungjang/comp12/mysql/: DbProcess.cpp  DbProcess.h
1기/first/youngchanhwang/comp12/: CMakeLists.txt  main.cpp
1기/first/youngchanhwang/comp12/db/: DbProcess.cpp  DbProcess.h
1기/first/youngchanhwang/comp12/entity/: Acceleration.cpp  Acceleration.h  Distance.cpp  Distance.h  Speed.cpp  Speed.h
1기/first/youngchanhwang/comp12/save/: SaveInDb.cpp  SaveInDb.h
1기/first/youngchanhwang/comp12/utility/: RandomGenerator.cpp  RandomGenerator.h  Sleep.cpp  Sleep.h
1기/first/youngchanhwang/comp26/: CMakeLists.txt
1기/first/youngchanhwang/comp26/calculate/: Railgun_shoot_speed.cpp  Railgun_shoot_speed.h  Railgun_shoot_time.cpp  Railgun_shoot_time.h
1기/first/youngchanhwang/comp26/entity/: Railgun.h
(+73 files in other folders)
